--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
         </span>
       </span>
       <span>
-        <a href="#/posts/{{$index}}">Comments</a>
+        <a href="#/posts/{{post._id}}">Comments</a>
       </span>
     </div>
     <form name="titleForm" ng-submit="titleForm.$valid && addPost()" class="navbar-form navbar-left" novalidate>
